src/components/structure/Box/styles.scss
@import 'halo';

$directions: (top bottom left right);
$box-alignments: (
  top center bottom left right normal space-between space-evenly
);
$text-alignments: (left center right);
$grid-cell-count: 24;

.component {
  @include border-box; // TODO: deprecate

  &.wrap {
    flex-wrap: wrap;
  }

  &.relative {
    position: relative;
  }

  &.flexColumn {
    @include flex-column($align: flex-start);
  }

  &.flexRow {
    @include flex-row;
  }
}

@each $name, $color in $colors {
  .background-#{$name} {
    background-color: $color;
  }
}

/**
 * TODO: global selectors shouldn't be necessary.
         figure out what the hell is wrong with cssmodules
**/

@each $alignment in $box-alignments {
  // column
  :global(.__halo_column_align_#{$alignment}) {
    align-items: map-get($box-flex, $alignment);
  }

  :global(.__halo_column_valign_#{$alignment}) {
    justify-content: map-get($box-flex, $alignment);
  }

  // row
  :global(.__halo_row_align_#{$alignment}) {
    justify-content: map-get($box-flex, $alignment);
  }

  :global(.__halo_row_valign_#{$alignment}) {
    align-items: map-get($box-flex, $alignment);
  }
}

@for $i from 1 through 10 {
  @each $d in $directions {
    :global(.__halo_padding_#{$d}_#{$i}) {
      padding-#{$d}: tempo($i);
    }

    :global(.__halo_margin_#{$d}_#{$i}) {
      margin-#{$d}: tempo($i);
    }
  }
}

@each $t in $text-alignments {
  :global(.__halo_textAlign_#{$t}) {
    text-align: $t;
  }
}

